Add pictogram batch and new category for August 2021 (#9532)
* Add pictogram batch and new category for August 2021

* chore(pictograms): update meta and snapshots

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/pictograms/pictograms.yml
+++ b/packages/pictograms/pictograms.yml
@@ -492,6 +492,17 @@
     - leadership
     - culture
     - security
+- name: build-applications-anywhere
+  friendly_name: Build applications anywhere
+  aliases:
+    - Red Hat
+    - speed
+    - storage
+    - applications
+    - anywhere
+    - build
+    - virtual
+    - cloud
 - name: building
   friendly_name: Building
   aliases:
@@ -793,6 +804,11 @@
     - data
     - analytics
     - data analytics
+- name: chart--quadrant-plot
+  friendly_name: Chart quadrant plot
+  aliases:
+    - quadrant plot
+    - group plots
 - name: chart--radar
   friendly_name: Chart radar
   aliases:
@@ -825,6 +841,13 @@
     - data
     - analytics
     - data analytics
+- name: chart--scree-plot
+  friendly_name: Chart scree plot
+  aliases:
+    - scree plot
+    - line plot
+    - factor analysis
+    - principal component analysis
 - name: chart--stepper
   friendly_name: Chart stepper
   aliases:
@@ -1013,6 +1036,20 @@
     - cloud
     - managed services
     - services
+- name: cloud--native--01
+  friendly_name: Cloud native 01
+  aliases:
+    - Red Hat
+    - cloud
+    - native
+    - applications
+- name: cloud--native--02
+  friendly_name: Cloud native 02
+  aliases:
+    - Red Hat
+    - cloud
+    - native
+    - applications
 - name: cloud--oracle
   friendly_name: Cloud Oracle
   aliases:
@@ -1159,6 +1196,11 @@
     - cloudy
     - windy
     - weather
+- name: cluster
+  friendly_name: Cluster
+  aliases:
+    - Red Hat
+    - cluster
 - name: coat--hanger
   friendly_name: Coat hanger
   aliases:
@@ -1255,6 +1297,12 @@
     - connect
     - internet of things
     - iot
+- name: connect--applications
+  friendly_name: Connect applications
+  aliases:
+    - Red Hat
+    - connection
+    - application
 - name: connected--ecosystem
   friendly_name: Connected ecosystem
   aliases:
@@ -1291,6 +1339,31 @@
     - blockchain
     - food
     - supply chain
+- name: container
+  friendly_name: Container
+  aliases:
+    - Red Hat
+    - container
+    - 'storage, data'
+- name: container--microservices
+  friendly_name: Container microservices
+  aliases:
+    - Red Hat
+    - container
+    - services
+    - micro
+    - microservices
+    - storage
+    - data
+- name: containerized-applications
+  friendly_name: Containerized applications
+  aliases:
+    - Red Hat
+    - container
+    - applications
+    - security
+    - storage
+    - data
 - name: containers-and-cloud-native
   friendly_name: Containers and Cloud Native
   aliases:
@@ -1671,6 +1744,15 @@
     - Ecuador
     - Quito
     - South America
+- name: edge
+  friendly_name: Edge
+  aliases:
+    - Red Hat
+    - edge
+    - cloud
+    - hybrid
+    - IoT
+    - internet of things
 - name: education
   friendly_name: Education
   aliases:
@@ -2287,6 +2369,13 @@
     - grow
     - farm
     - crop
+- name: guitar
+  friendly_name: Guitar
+  aliases:
+    - guitar
+    - musical instrument
+    - music
+    - string instrument
 - name: hail
   friendly_name: Hail
   aliases:
@@ -2489,6 +2578,17 @@
     - cloud storage
     - hybrid cloud
     - cloud servers
+- name: hybrid--cloud--infrastructure
+  friendly_name: Hybrid Cloud infrastructure
+  aliases:
+    - Red Hat
+    - cloud
+    - hybrid
+    - infrastructure
+    - enterprise
+    - data
+    - storage
+    - applications
 - name: hybrid--cloud--services
   friendly_name: Hybrid cloud services
   aliases:
@@ -2510,6 +2610,13 @@
   aliases:
     - IBM iX®
     - IBM
+- name: ibm--rpa
+  friendly_name: IBM RPA
+  aliases:
+    - robot
+    - robotic process automation
+    - bot
+    - automation
 - name: ibm--z
   friendly_name: IBM Z®
   aliases:
@@ -2613,6 +2720,14 @@
     - study
     - networking
     - network
+- name: insurance
+  friendly_name: Insurance
+  aliases:
+    - insurance
+    - home insurance
+    - insure
+    - health insurance
+    - car insurance
 - name: integration
   friendly_name: Integration
   aliases:
@@ -2674,6 +2789,18 @@
     - cloud
     - software
     - code
+- name: juice
+  friendly_name: Juice
+  aliases:
+    - juice
+    - fresh
+    - squeeze
+    - lemon
+    - lime
+    - orange
+    - citrus
+    - drink
+    - fruit
 - name: justice
   friendly_name: Justice
   aliases:
@@ -2710,6 +2837,27 @@
     - Kuala
     - Lumpur
     - Petronas
+- name: kubernetes
+  friendly_name: Kubernetes
+  aliases:
+    - Red Hat
+    - Kubernetes
+    - open source
+    - automation
+    - native
+    - cloud
+    - container
+- name: kubernetes--pod
+  friendly_name: Kubernetes pod
+  aliases:
+    - Red Hat
+    - Kubernetes
+    - pod
+    - open source
+    - automation
+    - native
+    - cloud
+    - container
 - name: language--01
   friendly_name: Language 01
   aliases:
@@ -2916,6 +3064,16 @@
   aliases:
     - mail
     - verse
+- name: manage-applications-anywhere
+  friendly_name: Manage applications anywhere
+  aliases:
+    - Red Hat
+    - applications
+    - manage
+    - speed
+    - anywhere
+    - virtual
+    - cloud
 - name: managing--contractual--flow
   friendly_name: Managing contractual flow
   aliases:
@@ -3356,6 +3514,14 @@
     - Okinawa
     - Shurijo
     - Japan
+- name: open-source
+  friendly_name: Open source
+  aliases:
+    - Red Hat
+    - open
+    - code
+    - applications
+    - developer
 - name: optimize--cash-flow--01
   friendly_name: Optimize cash flow 01
   aliases:
@@ -3781,6 +3947,14 @@
     - qr code
     - code
     - ID
+- name: quantum-computing
+  friendly_name: Quantum computing
+  aliases:
+    - Red Hat
+    - computing
+    - AI
+    - Q
+    - quantum
 - name: question
   friendly_name: Question
   aliases:
@@ -3850,6 +4024,11 @@
     - data analytics
     - data
     - analytics
+- name: read-only
+  friendly_name: Read only
+  aliases:
+    - read
+    - read only
 - name: receipt
   friendly_name: Receipt
   aliases:
@@ -3873,6 +4052,13 @@
     - industry
     - environment
     - process
+- name: red-hat--applications
+  friendly_name: Red Hat applications
+  aliases:
+    - Red Hat
+    - applications
+    - software
+    - services
 - name: refinery
   friendly_name: Refinery
   aliases:
@@ -4203,6 +4389,13 @@
     - data
     - storage
     - backup
+- name: serverless
+  friendly_name: Serverless
+  aliases:
+    - serverless
+    - scale
+    - workload
+    - resource
 - name: servers
   friendly_name: Servers
   aliases:
@@ -4583,6 +4776,13 @@
     - interaction
     - device
     - mobile
+- name: synergy
+  friendly_name: Synergy
+  aliases:
+    - Red Hat
+    - synergy
+    - union
+    - Venn diagram
 - name: systems-devops--analyze
   friendly_name: Systems DevOps analyze
   aliases:
@@ -5095,6 +5295,16 @@
     - endpoint
     - management
     - security
+- name: universal-experiences
+  friendly_name: Universal experiences
+  aliases:
+    - universal experiences
+    - customer experience
+    - customer journey
+    - user experiences
+    - user journey
+    - customer experience design
+    - user experience design
 - name: university
   friendly_name: University
   aliases:
@@ -5133,6 +5343,21 @@
     - Uruguay
     - Palacio Salvo
     - South America
+- name: uruguay--sol-de-mayo
+  friendly_name: Uruguay Sol de Mayo
+  aliases:
+    - Uruguay
+    - Sol de Mayo
+    - South America
+    - montevideo
+    - maldonado
+    - salto
+    - uruguaya
+    - uruguayo
+    - uruguayan
+    - sun
+    - sol
+    - may
 - name: user
   friendly_name: User
   aliases:
@@ -5232,6 +5457,22 @@
     - video play
     - video
     - controls
+- name: virtual--server
+  friendly_name: Virtual server
+  aliases:
+    - Red Hat
+    - virtual
+    - speed
+    - storage
+    - 'server, cloud'
+- name: virtual--storage
+  friendly_name: Virtual storage
+  aliases:
+    - Red Hat
+    - virtual
+    - speed
+    - storage
+    - cloud
 - name: virus
   friendly_name: Virus
   aliases:
