Use math.div instead of slash for sass (#9508)
* chore(styles): use math.div instead of slash

* chore(contributors): add contributor

* fix(styles): provide .import.scss files for dart-sass users

* fix(styles): add stylelint ignore for @imports below @use

* refactor(grid): convert story styles to use

Co-authored-by: Taylor Jones <taylor.jones826@gmail.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -792,6 +792,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "egriff38",
+      "name": "Eshin Griffith",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6627718?v=4",
+      "profile": "https://github.com/egriff38",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "commitConvention": "none"
