--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -60,6 +60,7 @@
     "lodash.throttle": "^4.1.1",
     "react-is": "^16.8.6",
     "use-resize-observer": "^6.0.0",
+    "wicg-inert": "^3.1.1",
     "window-or-global": "^1.0.1"
   },
   "devDependencies": {
